--- a/index.html
+++ b/index.html
@@ -3,46 +3,45 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Paycheck Calculator</title>
   </head>
   <body>
     <div class="container">
-      <h1>Paycheck Calculator</h1>
-      <h4>Instructions:</h4>
-      <p>Enter your hourly rate as well as the number of hours being billed into the specified fields and the calculator will determine your gross pay.</p>
-      <div class="row" id="calculator">
-        <form>       <!--CALCULATOR BEGINS HERE-->
-          <div class="col-xs-3 form-group">
-            <label for="hourly-rate">Your hourly rate:</label>
-            <input type="number" id="hourly-rate" class="form-control">
-          </div>
-          <div class="col-xs-3" id="billed-hrs">
-            <div class="form-group">
-              <label for="normal-hours">Your standard hours:</label>
-              <input type="number" id="normal-hours" class="form-control">
+      <div class="jumbotron" id="ui">
+        <div id="info">
+          <h1>Paycheck Calculator</h1>
+          <h4>Instructions:</h4>
+          <p>Enter your hourly rate and number of applicable hours and the calculator will tell you your gross  pay.</p>
+        </div>
+        <div class="row" id="calculator">
+          <form>       <!--CALCULATOR BEGINS HERE-->
+            <div class="col-xs-6">
+              <div class="form-group">
+                <label for="hourly-rate">Your hourly rate:</label>
+                <input type="number" step="0.01" id="hourly-rate" class="form-control">
+              </div>
             </div>
-            <div class="form-group">
-              <label for="ot-hours">Your overtime hours:</label>
-              <input type="number" id="ot-hours" class="form-control">
+            <div class="col-xs-6" id="billed-hrs">
+              <div class="form-group">
+                <label for="normal-hours">Your normal hours:</label>
+                <input type="number" step="0.01" id="normal-hours" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="ot-hours">Your overtime hours:</label>
+                <input type="number" step="0.01" id="ot-hours" class="form-control">
+              </div>
+              <div class="form-group">
+                <label for="dt-hours">Your doubletime hours:</label>
+                <input type="number" step="0.01" id="dt-hours" class="form-control">
+              </div>
             </div>
-            <div class="form-group">
-              <label for="dt-hours">Your doubletime hours:</label>
-              <input type="number" id="dt-hours" class="form-control">
-            </div>
-          </div>
-
-          <!--Tax calc below this line----------------->
-          <div class="col-xs-6" id="tax-calc">
-
-          </div>
-
-          <button class="btn btn-block btn-info" id="calculate">Calculate</button>
-        </form>  <!--END CALCULATOR-->
-      </div>
-      <div id="gross-pay">
-        <p>Gross Pay: <span class="calculated-gross">$PLACEHOLDER</span></p>
+            <button class="btn btn-block btn-info" id="calculate" type="submit">Calculate</button>
+          </form>
+          <p id="gross-pay">Gross Pay: <span class="calculated-gross"></span></p>  <!--END CALCULATOR-->
+        </div>
       </div>
     </div>
   </body>
