round the border of calculator

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <p>Enter your hourly rate and number of applicable hours and the calculator will tell you your gross  pay.</p>
         </div>
         <div class="row" id="calculator">
-          <form>       <!--CALCULATOR BEGINS HERE-->
+          <form>                                    <!--CALCULATOR BEGINS HERE-->
             <div class="col-xs-6">
               <div class="form-group">
                 <label for="hourly-rate">Your hourly rate:</label>
@@ -40,8 +40,8 @@
             </div>
             <button class="btn btn-block btn-info" id="calculate" type="submit">Calculate</button>
           </form>
-          <p id="gross-pay">Gross Pay: <span class="calculated-gross"></span></p>  <!--END CALCULATOR-->
-        </div>
+          <p id="gross-pay">Gross Pay: <span class="calculated-gross"></span></p>
+        </div>                                               <!--END CALCULATOR-->
       </div>
     </div>
   </body>
